--- a/style/style.scss
+++ b/style/style.scss
@@ -1,3 +1,13 @@
+html {
+  scroll-behavior: smooth;
+}
+@media (prefers-reduced-motion: reduce) {
+  html {
+    scroll-behavior: auto;
+  }
+}
+
+/* stylelint-disable-next-line no-invalid-position-at-import-rule */
 @import "https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap";
 
 * ::before ::after {
@@ -11,6 +21,17 @@ body {
   font-weight: 600;
   color: #342628;
   background-color: #f7f4ef;
+}
+
+.btn {
+  position: fixed;
+  right: 30px;
+  bottom: 30px;
+  z-index: 4;
+}
+
+.btnimg {
+  width: 2rem;
 }
 
 .img {
@@ -28,13 +49,29 @@ body {
   }
 }
 
-.navigation {
-  right: 0;
-  left: 0;
+.bottomicon {
   align-items: center;
-  padding: 20px 1.0625rem;
+  width: 2.1rem;
+}
+
+.list_text-il:hover {
+  color: #788402;
+}
+
+.navigation {
+  position: fixed;
+  top: 0;
+  right: 0;
+
+  /* width: 100% */
+  left: 0;
+  z-index: 3;
+  align-items: center;
+  padding: 8px 1.0625rem;
   background-color: #f7f4ef;
   box-shadow: 0 17px 20px -18px rgb(52 38 40 / 20%);
+
+  /* 생략 */
 
   &_top {
     display: flex;
@@ -69,6 +106,13 @@ body {
 
 .container {
   width: 100%;
+  margin-top: 6.57rem;
+}
+
+.slideimg {
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
 }
 
 .slide {
@@ -91,6 +135,7 @@ body {
   user-select: none;
 }
 
+/* stylelint-disable-next-line selector-class-pattern */
 .slide_item {
   /* position - 버튼 클릭시 left offset값을 적용시키기 위해 */
   position: relative;
@@ -112,6 +157,7 @@ body {
   transition: left 0.15s;
 }
 
+/* stylelint-disable-next-line selector-class-pattern */
 .slide_button {
   /* position */
   position: absolute;
@@ -134,25 +180,30 @@ body {
   border-radius: 100%;
 }
 
+/* stylelint-disable-next-line selector-class-pattern */
 .slide_prev_button {
   left: 10px;
 }
 
+/* stylelint-disable-next-line selector-class-pattern */
 .slide_next_button {
   right: 10px;
 }
 
 /* 각 슬라이드가 변경되는 것을 시각적으로 확인하기 쉽도록 각 슬라이드별 색상 적용 */
+/* stylelint-disable-next-line selector-class-pattern */
 .slide_item.item1 {
-  background-color: darkgoldenrod;
+  background-color: #f7f4ef;
 }
 
+/* stylelint-disable-next-line selector-class-pattern */
 .slide_item.item2 {
-  background-color: aqua;
+  background-color: #f7f4ef;
 }
 
+/* stylelint-disable-next-line selector-class-pattern */
 .slide_item.item3 {
-  background-color: blueviolet;
+  background-color: #f7f4ef;
 }
 
 /* 페이지네이션 스타일 */
@@ -163,6 +214,7 @@ li {
   list-style-type: none;
 }
 
+/* stylelint-disable-next-line selector-class-pattern */
 .slide_pagination {
   /* position */
   position: absolute;
@@ -177,6 +229,7 @@ li {
   transform: translateX(-50%);
 }
 
+/* stylelint-disable-next-line selector-class-pattern */
 .slide_pagination > li {
   font-size: 35px;
 
@@ -185,11 +238,13 @@ li {
   cursor: pointer;
 }
 
+/* stylelint-disable-next-line selector-class-pattern */
 .slide_pagination > li.active {
   /* 현재 슬라이드 색상은 투명도 없이 */
-  color: #f7f4ef;
+  color: #788402;
 }
 
+/* stylelint-disable-next-line selector-class-pattern */
 .slide_item_duplicate {
   position: relative;
   left: 0;
@@ -200,4 +255,90 @@ li {
   width: 100%;
   height: 300px;
   transition: left 0.15s;
+}
+
+.section {
+  display: grid;
+  grid-template-rows: repeat(2, 650px);
+  grid-template-columns: repeat(2, minmax(300px, 1fr));
+  grid-auto-columns: 15rem;
+  gap: 4rem 4rem;
+  justify-content: center;
+
+  //grid-template-rows: auto;
+  //grid-template-columns: 1fr 1fr;
+  width: fit-content;
+  height: fit-content;
+  padding: 10rem 0;
+  margin-right: auto;
+  margin-left: auto;
+  overflow: auto;
+}
+
+.item1 {
+  &_text {
+    margin-top: 1.5rem;
+  }
+}
+
+.card {
+  margin-inline: 5rem;
+  overflow: hidden;
+}
+
+.cadd img {
+  object-fit: cover;
+
+  /* hover 뒤 애니메이션 */
+  transition: transform 0.5s; /* 시간 설정 */
+  transform: scale(1); /* 이미지 확대 */
+}
+
+.card img:hover {
+  /* hover 시 애니메이션 */
+  transition: transform 0.5s; /* 시간 설정 */
+  transform: scale(1.1); /* 이미지 확대 */
+}
+
+.subtitle {
+  padding-bottom: 1.875rem;
+  padding-left: 1rem;
+  font-size: 0;
+  font-weight: 400;
+}
+
+.footer {
+  padding: 5rem 3.125rem 3rem;
+  font-weight: 500;
+  color: #f7f4ef;
+  background-color: #342628;
+
+  &_menu {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 3rem;
+  }
+
+  &_hlicon {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    padding-bottom: 0;
+    margin-top: 4rem;
+    margin-left: 78rem;
+  }
+}
+
+.memebtn {
+  background-color: #342628;
+}
+
+.lefttext_2 {
+  font-size: 1.25rem;
+}
+
+.text {
+  font-size: 0.9375rem;
+  font-weight: 400;
 }
