--- a/style/style.css
+++ b/style/style.css
@@ -277,6 +277,10 @@ li {
   transform: scale(1.1); /* 이미지 확대 */
 }
 
+.card__subtitle:hover {
+  color: #788402;
+}
+
 .subtitle {
   padding-bottom: 1.875rem;
   padding-left: 1rem;
